# serializer version: 1
# name: test_entities[button.qube_1_clear_monotonic_cache-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.qube_1_clear_monotonic_cache',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:counter',
    'original_name': 'Clear energy counter cache',
    'platform': 'qube_heatpump',
    'previous_unique_id': None,
    'suggested_object_id': 'qube_1_clear_monotonic_cache',
    'supported_features': 0,
    'translation_key': 'clear_monotonic_cache',
    'unique_id': '1.2.3.4_1_clear_monotonic_cache',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.qube_1_clear_monotonic_cache-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'qube 1 Clear energy counter cache',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:counter',
    }),
    'context': <ANY>,
    'entity_id': 'button.qube_1_clear_monotonic_cache',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.qube_1_reload-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.qube_1_reload',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reload',
    'platform': 'qube_heatpump',
    'previous_unique_id': None,
    'suggested_object_id': 'qube_1_reload',
    'supported_features': 0,
    'translation_key': 'qube_reload',
    'unique_id': '1.2.3.4_1_qube_reload',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.qube_1_reload-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'qube 1 Reload',
    }),
    'context': <ANY>,
    'entity_id': 'button.qube_1_reload',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
